--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "electron ."
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "electron": "^2.0.7"
   }
 }
